regression/fail/modules.24.sml
structure S:
   sig
      datatype t = A | B
   end =
   struct
      datatype t = B | C
   end
